# zed

./: Cargo.toml  LONGPORT_CONFIG_GUIDE.md  remark.md
.kiro/specs/stock-trading-system/: tasks.md
assets/keymaps/: default-windows.json
crates/bedrock/src/: bedrock.rs
crates/paths/src/: paths.rs
crates/platform_title_bar/src/: platform_title_bar.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: settings_content.rs  stock_trading.rs
crates/sidebar/src/: sidebar.rs
crates/stock_trading/: ACTION_SYSTEM_INTEGRATION.md  CURRENT_STATUS.md  Cargo.toml  GPUI_COMPONENT_CONFLICT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUCCESS.md  KEYBOARD_SHORTCUTS.md  LONGPORT_CONFIGURATION.md  LONGPORT_INTEGRATION.md  PANEL_IMPLEMENTATION_STATUS.md  TASK_12_IMPLEMENTATION.md  TASK_2.4_IMPLEMENTATION.md  TASK_5_IMPLEMENTATION.md  TASK_8_IMPLEMENTATION.md  TASK_9.1_IMPLEMENTATION.md
crates/stock_trading/keymaps/: chart.json  default.json  order.json  watchlist.json
crates/stock_trading/src/: chart_panel.rs  demo_panel.rs  error_handling.rs  input_validation.rs  longport_service.rs  market_data.rs  mock_data_service.rs  order_panel.rs  panel_manager.rs  panel_persistence.rs  panels.rs  stock_trading.rs  tests.rs  trading_actions.rs  trading_settings.rs  watchlist_panel.rs  websocket_service.rs
crates/title_bar/src/: title_bar.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  reliability.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  edit_prediction_registry.rs  open_listener.rs  remote_debug.rs  telemetry_log.rs
crates/zed/src/zed/quick_action_bar/: preview.rs  repl_menu.rs
crates/zed_lite/: Cargo.toml
crates/zed_lite/src/: main.rs
